--- a/checkout.html
+++ b/checkout.html
@@ -176,8 +176,28 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
+        const query = new URLSearchParams(window.location.search);
+        console.log(Array.from(query.entries()));
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         
       });
+
+     
     </script>
   </body>
 </html>
