--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </div>
       </div>
     </div>
+    
  
     <footer class="bg-light text-center py-3">
       <p>&copy; 2025 E-commerce Website. All rights reserved.</p>
@@ -154,8 +155,7 @@
           <input type="hidden" name="id" value="${product.id}"/>
           <input type="hidden" name="name" value="${product.name}"/>
           <input type="hidden" name="price" value="${product.price}"/>
-         <button class="btn btn-danger remove-from-cart" 
-         data-id="${product.id}">
+         <button class="btn btn-danger remove-from-cart" data-id="${product.id}">
         Remove
         </button>
          </div>
@@ -163,18 +163,18 @@
         `;
           });
           cartList.innerHTML = cartItem;
-          document.querySelectorAll('remove-from-cart').forEach((button) => {
+          document.querySelectorAll('.remove-from-cart').forEach((button) => {
             button.addEventListener('click', removeFromCart);
           });
         }
 
         function removeFromCart(event) {
-          console.log("remove")
           const productId = event.target.getAttribute('data-id');
+          console.log(productId);
           const productIndex = cart.findIndex(
             (product) => product.id == productId,
           );
-          cart.splice(productIndex, 1);
+          cart.splice(productIndex - 1, 1);
           renderCart();
         }
       });
