--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="confirmation.html">Confirmation</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="register.html">register
+          </li>
         </ul>
       </div>
     </nav>
