--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="register.html">register
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">login
+          </li>
         </ul>
       </div>
     </nav>
