--- a/login.html
+++ b/login.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Your E-commerce Site</title>
     <!-- TODO: Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- TODO: Create a navigation bar that links to your homepage -->
     
-    <div class="container">
+    <div class="container" id="login">
         <h1>Log In</h1>
         
         <!-- TODO: Create a login form with:
